@@ -374,12 +374,64 @@ UTEST_BEGIN("runtime.runtime", string)
         UTEST_ASSERT(h.size() == 10);
     }
 
+    void test_line_convert()
+    {
+        typedef struct cv_t {
+            const char *src;
+            const char *dos;
+            const char *unx;
+        } cv_t;
+
+        static const cv_t cases[] =
+        {
+            { "", "", "" },
+            { "test", "test", "test" },
+            { "some line", "some line", "some line" },
+
+            { "\n", "\n\r", "\n" },
+            { "\r", "\r", "\r" },
+            { "\n\n", "\n\r\n\r", "\n\n" },
+            { "\r\n", "\r\n\r", "\r\n" },
+            { "\n\r\n", "\n\r\n\r", "\n\n" },
+            { "\n\r\n\r", "\n\r\n\r", "\n\n" },
+            { "\n\r\n\r\r", "\n\r\n\r\r", "\n\n\r" },
+
+            { "Two\nlines", "Two\n\rlines", "Two\nlines" },
+            { "Two\n\rlines", "Two\n\rlines", "Two\nlines" },
+            { "Three\nlines\n", "Three\n\rlines\n\r", "Three\nlines\n" },
+            { "Three\n\rlines\n\r", "Three\n\rlines\n\r", "Three\nlines\n" },
+            { "Three\n\rlines\n", "Three\n\rlines\n\r", "Three\nlines\n" },
+            { "Three\nlines\n\r", "Three\n\rlines\n\r", "Three\nlines\n" },
+
+            { "\nYet\nAnother\nTest\nCase\n", "\n\rYet\n\rAnother\n\rTest\n\rCase\n\r", "\nYet\nAnother\nTest\nCase\n" },
+            { "\r\nYet\nAnother\nTest\nCase\n", "\r\n\rYet\n\rAnother\n\rTest\n\rCase\n\r", "\r\nYet\nAnother\nTest\nCase\n" },
+            { "\nYet\nAnother\nTest\nCase\r", "\n\rYet\n\rAnother\n\rTest\n\rCase\r", "\nYet\nAnother\nTest\nCase\r" },
+        };
+
+        printf("Testing dos/unix line conversion\n");
+
+        for (size_t i=0, n=sizeof(cases)/sizeof(cv_t); i<n; ++i)
+        {
+            LSPString a, b;
+            printf("Testing string #%d: %s\n", int(i), cases[i].src);
+            UTEST_ASSERT(a.set_ascii(cases[i].src));
+            UTEST_ASSERT(b.set_ascii(cases[i].src));
+
+            UTEST_ASSERT(a.to_dos());
+            UTEST_ASSERT(a.equals_ascii(cases[i].dos));
+
+            UTEST_ASSERT(b.to_unix());
+            UTEST_ASSERT(b.equals_ascii(cases[i].unx));
+        }
+    }
+
     UTEST_MAIN
     {
         test_basic();
         test_start_end();
         test_base_hashing();
         test_hash_key();
+        test_line_convert();
     }
 UTEST_END;
 
